--- a/index.html
+++ b/index.html
@@ -318,7 +318,11 @@
                     <div class="result-card" id="resultCard" style="display: none;">
                         <div class="result-header">
                             <h3 data-en="Converted Text" data-hi="परिवर्तित पाठ">Converted Text</h3>
-                            <button id="copyBtn" title="Copy Text"><i class="fas fa-copy"></i></button>
+                            <div class="result-actions">
+                                <button id="copyBtn" title="Copy Text"><i class="fas fa-copy"></i></button>
+                                <button id="downloadBtn" title="Download Text File"><i
+                                        class="fas fa-file-download"></i></button>
+                            </div>
                         </div>
                         <div class="result-body" id="resultBody">
                             <!-- Converted text will appear here -->
