Update Kaithi converter to support Urdu input/output

--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@
                                     <option value="hindi">Hindi (हिन्दी)</option>
                                     <option value="english">English</option>
                                     <option value="bhojpuri">Bhojpuri (भोजपुरी)</option>
+                                    <option value="urdu">Urdu (اردو)</option>
                                 </select>
                             </div>
                             <button id="convertBtn" class="btn-primary" data-en="Convert Now"
