Fix dark mode visibility for dropdown options

--- a/index.html
+++ b/index.html
@@ -285,16 +285,16 @@
                 <div class="section-header">
                     <span class="subtitle" data-en="Preserving Heritage" data-hi="विरासत का संरक्षण">Preserving
                         Heritage</span>
-                    <h2 data-en="Kaithi Script Converter" data-hi="कैथी लिपि परिवर्तक">Kaithi Script Converter</h2>
+                    <h2 data-en="Kaithi & Urdu Converter" data-hi="कैथी और उर्दू परिवर्तक">Kaithi & Urdu Converter</h2>
                 </div>
 
                 <div class="converter-container">
                     <div class="upload-card shadow-glow">
                         <div class="upload-area" id="dropZone">
                             <i class="fas fa-file-upload"></i>
-                            <p data-en="Drag & Drop or Click to Upload Kaithi Document"
-                                data-hi="कैथी दस्तावेज़ अपलोड करने के लिए खींचें और छोड़ें या क्लिक करें">Drag &
-                                Drop or Click to Upload Kaithi Document</p>
+                            <p data-en="Drag & Drop Kaithi or Urdu Document"
+                                data-hi="कैथी या उर्दू दस्तावेज़ यहाँ अपलोड करें">Drag & Drop Kaithi or Urdu Document
+                            </p>
                             <span data-en="(JPG, PNG, PDF supported)" data-hi="(JPG, PNG, PDF समर्थित)">(JPG, PNG,
                                 PDF supported)</span>
                             <input type="file" id="kaithiUpload" accept=".jpg,.jpeg,.png,.pdf" hidden>
