Add policy links to footer and disclaimer update

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                                 data-en="Note: This is an AI-powered conversion. Accuracy may vary based on handwriting quality."
                                 data-hi="नोट: यह AI-आधारित परिवर्तन है। हस्तलेखन की गुणवत्ता के आधार पर सटीकता भिन्न हो सकती है।">
                                 Note: This is an AI-powered conversion. Accuracy may vary based on handwriting
-                                quality.</p>
+                                quality. And Your data can be inserted to LLM for Training.</p>
                         </div>
                     </div>
                 </div>
@@ -350,6 +350,13 @@
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
                 <a href="#"><i class="fab fa-youtube"></i></a>
+            </div>
+            <div class="footer-policies">
+                <a href="#" data-en="Privacy Policy" data-hi="गोपनीयता नीति">Privacy Policy</a>
+                <span class="separator">|</span>
+                <a href="#" data-en="Terms of Service" data-hi="सेवा की शर्तें">Terms of Service</a>
+                <span class="separator">|</span>
+                <a href="#" data-en="Data Usage" data-hi="डेटा उपयोग">Data Usage</a>
             </div>
             <div class="copyright">
                 <p>&copy; 2026 Thawe Dham. <span data-en="Designed with devotion."
