Enhance SEO: Hindi keywords, Footer Address, and Lazy Loading

--- a/index.html
+++ b/index.html
@@ -4,12 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thawe Dham | Official Temple Website & Kaithi Script Converter</title>
-    <meta name="description"
-        content="Official website of Thawe Dham Shakti Peeth. Experience Live Darshan of Mata Thawe Wali, book Online Puja, and use our Free AI Kaithi & Urdu Script Converter.">
+    <title>Thawe Dham | थावे धाम</title>
     <meta name="keywords"
-        content="Thawe Dham, Thawe Mandir, Mata Thawe Wali, Kaithi Script Converter, Kaithi to Hindi, Rahshu Bhagat, Gopalganj Temple, Bihar Tourism">
-    <link rel="canonical" href="https://thawedham.com/">
+        content="Thawe Dham, Thawe Mandir, Mata Thawe Wali, Kaithi Script Converter, Kaithi to Hindi, Rahshu Bhagat, Gopalganj Temple, Bihar Tourism, थावे धाम, थावे मंदिर, गोपालगंज, बिहार, माता रानी">
+
+    <!-- ... (skipping lines) ... -->
+
+    <div class="footer-policies">
+        <a href="#" data-en="Privacy Policy" data-hi="गोपनीयता नीति">Privacy Policy</a>
+        <span class="separator">|</span>
+        <a href="#" data-en="Terms of Service" data-hi="सेवा की शर्तें">Terms of Service</a>
+        <span class="separator">|</span>
+        <a href="#" data-en="Data Usage" data-hi="डेटा उपयोग">Data Usage</a>
+    </div>
+    <p class="address-text" style="font-size: 0.9rem; margin-top: 10px; opacity: 0.8;">📍 Thawe, Gopalganj, Bihar -
+        841440</p>
+    <div class="copyright">
+        <p>&copy; 2026 Thawe Dham. <span data-en="Designed with devotion." data-hi="भक्ति के साथ निर्मित।">Designed with
+                devotion.</span></p>
+    </div>
 
     <!-- SOCIAL MEDIA TAGS (Open Graph) -->
     <meta property="og:title" content="Thawe Dham - Shakti Peeth & Kaithi Converter">
@@ -228,30 +241,30 @@
                 </div>
                 <div class="gallery-grid">
                     <div class="gallery-item-large">
-                        <img src="Images/Mandir.jpg" alt="Thawe Dham Main Temple Structure">
+                        <img src="Images/Mandir.jpg" alt="Thawe Dham Main Temple Structure" loading="lazy">
                         <div class="item-overlay"><span data-en="Main Mandir" data-hi="मुख्य मंदिर">Main Mandir</span>
                         </div>
                     </div>
                     <div class="gallery-item">
-                        <img src="Images/Mandir_Gate.jpg" alt="Temple Gate">
+                        <img src="Images/Mandir_Gate.jpg" alt="Temple Gate" loading="lazy">
                         <div class="item-overlay"><span data-en="Entry Gate" data-hi="प्रवेश द्वार">Entry Gate</span>
                         </div>
                     </div>
                     <div class="gallery-item">
-                        <img src="Images/Thawe_Mata_Ji.jpg" alt="Thawe Mata">
+                        <img src="Images/Thawe_Mata_Ji.jpg" alt="Devotees" loading="lazy">
                         <div class="item-overlay"><span data-en="Mata Di" data-hi="माता रानी">Mata Di</span></div>
                     </div>
                     <div class="gallery-item">
-                        <img src="Images/Devotes.jpg" alt="Devotees">
+                        <img src="Images/Devotes.jpg" alt="Devotees" loading="lazy">
                         <div class="item-overlay"><span data-en="Devotees" data-hi="भक्तगण">Devotees</span></div>
                     </div>
                     <div class="gallery-item">
-                        <img src="Images/Rahsu_Bhagat.jpg" alt="Rahshu Bhagat">
+                        <img src="Images/Rahsu_Bhagat.jpg" alt="Rahshu Bhagat" loading="lazy">
                         <div class="item-overlay"><span data-en="Rahshu Bhagat" data-hi="रह्शु भगत">Rahshu Bhagat</span>
                         </div>
                     </div>
                     <div class="gallery-item">
-                        <img src="Images/Nanaji&Nani.jpg" alt="Special Tribute">
+                        <img src="Images/Nanaji&Nani.jpg" alt="Special Tribute" loading="lazy">
                         <div class="item-overlay"><span data-en="Family Tribute" data-hi="पारिवारिक श्रद्धांजलि">Family
                                 Tribute</span></div>
                     </div>
