Revert H1 visual change (Keep SEO)

--- a/index.html
+++ b/index.html
@@ -96,9 +96,7 @@
             <div class="hero-overlay"></div>
             <div class="hero-content">
                 <div class="daily-tithi" id="tithiDisplay">Loading...</div>
-                <h1 class="reveal-text" data-en="Welcome to Thawe Dham" data-hi="थावे धाम में आपका स्वागत है">Welcome to
-                    Thawe Dham</h1>
-                <p class="subtitle" style="font-size: 1.5rem; color: #FFD700; margin-bottom: 1rem;">Jai Mata Di</p>
+                <h1 class="reveal-text" data-en="Jai Mata Di" data-hi="जय माता दी">Jai Mata Di</h1>
                 <p class="reveal-text delay"
                     data-en="Experience the divine presence of Thawe Wali Mata. Where faith meets eternity."
                     data-hi="थावे वाली माता की दिव्य उपस्थिति का अनुभव करें। जहाँ विश्वास अनंत काल से मिलता है।">
