--- a/index.html
+++ b/index.html
@@ -7,22 +7,9 @@
     <title>Thawe Dham | थावे धाम</title>
     <meta name="keywords"
         content="Thawe Dham, Thawe Mandir, Mata Thawe Wali, Kaithi Script Converter, Kaithi to Hindi, Rahshu Bhagat, Gopalganj Temple, Bihar Tourism, थावे धाम, थावे मंदिर, गोपालगंज, बिहार, माता रानी">
-
-    <!-- ... (skipping lines) ... -->
-
-    <div class="footer-policies">
-        <a href="#" data-en="Privacy Policy" data-hi="गोपनीयता नीति">Privacy Policy</a>
-        <span class="separator">|</span>
-        <a href="#" data-en="Terms of Service" data-hi="सेवा की शर्तें">Terms of Service</a>
-        <span class="separator">|</span>
-        <a href="#" data-en="Data Usage" data-hi="डेटा उपयोग">Data Usage</a>
-    </div>
-    <p class="address-text" style="font-size: 0.9rem; margin-top: 10px; opacity: 0.8;">📍 Thawe, Gopalganj, Bihar -
-        841440</p>
-    <div class="copyright">
-        <p>&copy; 2026 Thawe Dham. <span data-en="Designed with devotion." data-hi="भक्ति के साथ निर्मित।">Designed with
-                devotion.</span></p>
-    </div>
+    <meta name="description"
+        content="Official website of Thawe Dham Shakti Peeth. Experience Live Darshan of Mata Thawe Wali, book Online Puja, and use our Free AI Kaithi & Urdu Script Converter.">
+    <link rel="canonical" href="https://thawedham.com/">
 
     <!-- SOCIAL MEDIA TAGS (Open Graph) -->
     <meta property="og:title" content="Thawe Dham - Shakti Peeth & Kaithi Converter">
