Ultimate SEO: Geo-tags, Language Alts, Aria-Labels for 'Thawe' dominance

--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
         content="Official website of Thawe Dham Shakti Peeth. Experience Live Darshan of Mata Thawe Wali, book Online Puja, and use our Free AI Kaithi & Urdu Script Converter.">
     <link rel="canonical" href="https://thawedham.com/">
 
+    <!-- GEO TAGS FOR LOCAL SEO (Invisible) -->
+    <meta name="geo.region" content="IN-BR" />
+    <meta name="geo.placename" content="Thawe" />
+    <meta name="geo.position" content="26.4290;84.4497" />
+    <meta name="ICBM" content="26.4290, 84.4497" />
+
+    <!-- LANGUAGE ALTERNATES -->
+    <link rel="alternate" href="https://thawedham.com/" hreflang="x-default" />
+    <link rel="alternate" href="https://thawedham.com/" hreflang="en" />
+    <link rel="alternate" href="https://thawedham.com/" hreflang="hi" />
+
     <!-- SOCIAL MEDIA TAGS (Open Graph) -->
     <meta property="og:title" content="Thawe Dham - Shakti Peeth & Kaithi Converter">
     <meta property="og:description"
@@ -61,11 +72,15 @@
             <div class="logo">THAWE<span>DHAM</span></div>
 
             <ul class="nav-links" id="navLinks">
-                <li><a href="#home" data-en="Home" data-hi="मुख्य पृष्ठ">Home</a></li>
-                <li><a href="#darshan" data-en="Live Darshan" data-hi="दिव्य दर्शन">Live Darshan</a></li>
-                <li><a href="#history" data-en="History" data-hi="इतिहास">History</a></li>
-                <li><a href="#sewa" data-en="E-Sewa" data-hi="ई-सेवा">E-Sewa</a></li>
-                <li><a href="#kaithi" data-en="Kaithi Converter" data-hi="कैथी कन्वर्टर">Kaithi Converter</a></li>
+                <li><a href="#home" data-en="Home" data-hi="मुख्य पृष्ठ" aria-label="Thawe Dham Home">Home</a></li>
+                <li><a href="#darshan" data-en="Live Darshan" data-hi="दिव्य दर्शन"
+                        aria-label="Live Darshan of Mata Thawe Wali">Live Darshan</a></li>
+                <li><a href="#history" data-en="History" data-hi="इतिहास"
+                        aria-label="History of Thawe Mandir and Rahsu Bhagat">History</a></li>
+                <li><a href="#sewa" data-en="E-Sewa" data-hi="ई-सेवा"
+                        aria-label="Online Puja Booking for Thawe Dham">E-Sewa</a></li>
+                <li><a href="#kaithi" data-en="Kaithi Converter" data-hi="कैथी कन्वर्टर"
+                        aria-label="AI Kaithi Script Converter Tool">Kaithi Converter</a></li>
                 <!--<li><a href="#contact" class="btn-primary" data-en="Donate" data-hi="दान करें">Donate</a></li>-->
             </ul>
 
