Optimize SEO: Update H1, add Travel section, improve Kaithi text

--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
             <div class="hero-overlay"></div>
             <div class="hero-content">
                 <div class="daily-tithi" id="tithiDisplay">Loading...</div>
-                <h1 class="reveal-text" data-en="Jai Mata Di" data-hi="जय माता दी">Jai Mata Di</h1>
+                <h1 class="reveal-text" data-en="Welcome to Thawe Dham" data-hi="थावे धाम में आपका स्वागत है">Welcome to Thawe Dham</h1>
+                <p class="subtitle reveal-text delay" style="font-size: 1.5rem; color: var(--gold); margin-top: 10px; font-weight: 600;" data-en="Jai Mata Di" data-hi="जय माता दी">Jai Mata Di</p>
                 <p class="reveal-text delay"
                     data-en="Experience the divine presence of Thawe Wali Mata. Where faith meets eternity."
                     data-hi="थावे वाली माता की दिव्य उपस्थिति का अनुभव करें। जहाँ विश्वास अनंत काल से मिलता है।">
@@ -232,6 +233,36 @@
             </div>
         </section>
 
+        <!-- How to Reach -->
+        <section id="location" class="location-section" style="padding: 5rem 0; background-color: var(--dark-bg-2);">
+            <div class="container">
+                <div class="section-header">
+                    <span class="subtitle" data-en="Plan Your Journey" data-hi="अपनी यात्रा की योजना बनाएं">Plan Your Journey</span>
+                    <h2 data-en="How to Reach Thawe Dham" data-hi="थावे धाम कैसे पहुंचें">How to Reach Thawe Dham</h2>
+                </div>
+                <div class="location-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 2rem; margin-top: 3rem;">
+                    <div class="location-card text-center" style="padding: 2rem; background: rgba(255, 255, 255, 0.05); border-radius: 15px; border: 1px solid rgba(255, 215, 0, 0.2);">
+                        <i class="fas fa-train" style="font-size: 2.5rem; color: var(--gold); margin-bottom: 1rem;"></i>
+                        <h3 style="color: var(--text-light); margin-bottom: 0.5rem;" data-en="By Train" data-hi="ट्रेन से">By Train</h3>
+                        <p style="color: var(--text-gray);" data-en="Nearest Station: Thawe Junction (THE)" data-hi="निकटतम स्टेशन: थावे जंक्शन (THE)">Nearest Station: Thawe Junction (THE)</p>
+                        <p style="color: var(--text-gray); font-size: 0.9rem;" data-en="Direct trains from Gorakhpur, Siwan, and Chhapra." data-hi="गोरखपुर, सीवान और छपरा से सीधी ट्रेनें।">Direct trains from Gorakhpur, Siwan, and Chhapra.</p>
+                    </div>
+                    <div class="location-card text-center" style="padding: 2rem; background: rgba(255, 255, 255, 0.05); border-radius: 15px; border: 1px solid rgba(255, 215, 0, 0.2);">
+                        <i class="fas fa-road" style="font-size: 2.5rem; color: var(--gold); margin-bottom: 1rem;"></i>
+                        <h3 style="color: var(--text-light); margin-bottom: 0.5rem;" data-en="By Road" data-hi="सड़क मार्ग से">By Road</h3>
+                        <p style="color: var(--text-gray);" data-en="Location: Gopalganj, Bihar" data-hi="स्थान: गोपालगंज, बिहार">Location: Gopalganj, Bihar</p>
+                        <p style="color: var(--text-gray); font-size: 0.9rem;" data-en="Well connected by NH-27. 6km from Gopalganj town." data-hi="NH-27 से अच्छी तरह जुड़ा हुआ है। गोपालगंज शहर से 6 किमी।">Well connected by NH-27. 6km from Gopalganj town.</p>
+                    </div>
+                    <div class="location-card text-center" style="padding: 2rem; background: rgba(255, 255, 255, 0.05); border-radius: 15px; border: 1px solid rgba(255, 215, 0, 0.2);">
+                        <i class="fas fa-plane" style="font-size: 2.5rem; color: var(--gold); margin-bottom: 1rem;"></i>
+                        <h3 style="color: var(--text-light); margin-bottom: 0.5rem;" data-en="By Air" data-hi="हवाई मार्ग से">By Air</h3>
+                        <p style="color: var(--text-gray);" data-en="Nearest Airport: Patna (PAT)" data-hi="निकटतम हवाई अड्डा: पटना (PAT)">Nearest Airport: Patna (PAT)</p>
+                        <p style="color: var(--text-gray); font-size: 0.9rem;" data-en="Approx 145km from Jay Prakash Narayan Airport." data-hi="जय प्रकाश नारायण हवाई अड्डे से लगभग 145 किमी।">Approx 145km from Jay Prakash Narayan Airport.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Divine Gallery -->
         <section id="gallery" class="gallery-section">
             <div class="container">
@@ -320,6 +351,12 @@
                     <span class="subtitle" data-en="Preserving Heritage" data-hi="विरासत का संरक्षण">Preserving
                         Heritage</span>
                     <h2 data-en="Kaithi & Urdu Converter" data-hi="कैथी और उर्दू परिवर्तक">Kaithi & Urdu Converter</h2>
+                </div>
+
+                <div class="kaithi-text text-center" style="max-width: 800px; margin: 0 auto 40px;">
+                    <p class="lead" data-en="Free online tool to translate historical Kaithi records from Bihar land deeds into Hindi." data-hi="बिहार के भूमि दस्तावेजों के ऐतिहासिक कैथी लेखों को हिंदी में अनुवाद करने के लिए मुफ्त ऑनलाइन टूल।">
+                        Free online tool to translate historical Kaithi records from Bihar land deeds into Hindi.
+                    </p>
                 </div>
 
                 <div class="converter-container">
