Enhancement: Make PWA Install button visible immediately with manual instructions fallback

--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
             </ul>
 
             <div class="nav-controls">
+                <button id="installAppBtn" class="control-btn" style="display: none;" title="Install App"><i
+                        class="fas fa-download"></i></button>
                 <button id="langToggle" class="control-btn" title="Change Language">EN</button>
                 <button id="themeToggle" class="control-btn" title="Toggle Theme"><i class="fas fa-moon"></i></button>
                 <button class="menu-toggle" id="menuToggle"><i class="fas fa-bars"></i></button>
