UI: Swap Hero H1 and Subtitle for better spiritual focus

--- a/index.html
+++ b/index.html
@@ -104,11 +104,10 @@
             <div class="hero-overlay"></div>
             <div class="hero-content">
                 <div class="daily-tithi" id="tithiDisplay">Loading...</div>
-                <h1 class="reveal-text" data-en="Welcome to Thawe Dham" data-hi="थावे धाम में आपका स्वागत है">Welcome to
-                    Thawe Dham</h1>
+                <h1 class="reveal-text" data-en="Jai Mata Di" data-hi="">जय माता दी</h1>
                 <p class="subtitle reveal-text delay"
                     style="font-size: 1.5rem; color: var(--gold); margin-top: 10px; font-weight: 600;"
-                    data-en="Jai Mata Di" data-hi="जय माता दी">Jai Mata Di</p>
+                    data-en="Welcome to Thawe Dham" data-hi="थावे धाम में आपका स्वागत है">Jai Mata Di</p>
                 <p class="reveal-text delay"
                     data-en="Experience the divine presence of Thawe Wali Mata. Where faith meets eternity."
                     data-hi="थावे वाली माता की दिव्य उपस्थिति का अनुभव करें। जहाँ विश्वास अनंत काल से मिलता है।">
