Fix PWA Compatibility: Updated Manifest, SW Cache Strategy, and iOS Meta Tags

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#FF7043">
 
+    <!-- iOS PWA Tags -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Thawe Dham">
+    <link rel="apple-touch-icon" href="Images/Thawe_Mata_Ji.jpg">
+
     <!-- GEO TAGS FOR LOCAL SEO (Invisible) -->
     <meta name="geo.region" content="IN-BR" />
     <meta name="geo.placename" content="Thawe" />
@@ -118,6 +124,7 @@
                     <button id="lightDiyaBtn" class="shrine-btn"><i class="fas fa-fire"></i> <span data-en="Light Diya"
                             data-hi="दिया जलाएं">Light Diya</span></button>
                 </div>
+
             </div>
         </section>
 
